# agent-observability

./: README.md  config.yaml  go.mod  plan.md
agentsdk/go/: config.go  events.go  go.mod  s2client.go  session.go  tracing.go
agentsdk/python/: pyproject.toml
agentsdk/python/agentsdk/: __init__.py  config.py  events.py  s2client.py  session.py
docs/: architecture.puml  data-flow.puml  index.html  sequence.puml
examples/go_agent/: go.mod  main.go
examples/python_agent/: main.py  requirements.txt
examples/stream_reader/: main.py
otelcol-agent/: components.go  main.go
s2exporter/: config.go  event_converter.go  factory.go  s2client.go  s2exporter.go  s2exporter_test.go
